[package]
name = "tetris_client"
version = "0.1.0"
authors = ["Bram Buurlage <brambuurlage@gmail.com>"]
edition = "2018"

[dependencies]
tetris_model = { path = "../model" }
serde = "1"
serde_json = "1"
quicksilver = { git = "https://github.com/Kurble/quicksilver.git", branch = "mouse-projection-wasm-fix" }
mirror = { git = "https://github.com/Kurble/mirror.git" }
rand = "0.6"
futures = "0.1.25"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
websocket = { version = "0.22.3", default-features=false, features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.12"