[package]
name = "tetris_model"
version = "0.1.0"
authors = ["Bram Buurlage <brambuurlage@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1"
serde_json = "1"
mirror = { git = "https://github.com/Kurble/mirror.git" }
byteorder = "1"
rand = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
websocket = { version = "0.22.3", default-features=false, features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.12"