[package]
name = "tetris_server"
version = "0.1.0"
authors = ["Bram Buurlage <brambuurlage@gmail.com>"]
edition = "2018"

[dependencies]
tetris_model = { path = "../model" }
serde = "1"
serde_json = "1"
mirror = { git = "https://github.com/Kurble/mirror.git" }
actix = "0.7.9"
actix-web = { version = "0.7.18", features = ["ssl"] }
openssl = "0.10"
clap = "2"
rand = "0.6"